# fastapi_sqlite_base_template

./: README.md  main.py  pre_start.py  prestart.sh  pyproject.toml
app/: utils.py
app/api/api_v1/endpoints/: login.py  users.py  utils.py
app/core/: config.py  security.py
app/crud/: base.py  crud_user.py
app/db/: base.py  init_db.py  session.py  sql_app.db
app/models/: item.py  user.py
app/schemas/: item.py  user.py
